--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -18,6 +18,10 @@
   box-shadow: 0px 0px 4px #D5D5D5;
 }
 
+.gil-block h1 {
+  margin: 0.5em;
+}
+
 .gil-block h2 {
   font-weight: 600;
   margin-top: 0;
@@ -47,6 +51,7 @@
 
 .gil-block .update {
   font-size: 8pt;
+  margin-left: 0.4em;
 }
 
 .gil-center {
@@ -57,4 +62,135 @@
   text-align: center;
   font-size: 9pt;
   margin-top: 0em;
+}
+
+.gil-button {
+  display: inline-block;
+  background-color: #0073AA;
+  color: #FBFBFB;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 15pt;
+  margin-top: 1em;
+  border: 2px solid #0073AA;
+  transition: color 0.25s ease-out, background-color 0.25s ease-out;
+}
+
+.gil-button:hover {
+  background-color: transparent;
+  color: #0073AA;
+}
+
+.gil-function {
+  display: inline-table;
+  width: 100%;
+  border: 2px solid #EAEAEA;
+  margin-bottom: 1em;
+  border-collapse: collapse;
+}
+
+.gil-function td {
+  padding: 0.25em 0.5em;
+}
+
+.gil-function .name {
+  font-weight: 400;
+}
+
+.gil-function .return {
+  font-size: 9pt;
+  background-color: #EAEAEA;
+  text-transform: uppercase;
+  width: 80px;
+  text-align: center;
+}
+
+.gil-function .name,
+.gil-function .return {
+  font-family: "Lucida Console", Monaco, monospace;
+}
+
+.gil-update-wrapper {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(241, 241, 241, 0.9);
+  z-index: 99999;
+}
+
+.gil-update-wrapper .gil-update-content {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.gil-update-wrapper .animation {
+  transition: transform 0.2s ease-out;
+}
+
+.gil-update-wrapper .process {
+  display: inline-block;
+  margin-top: 2em;
+  height: 128px;
+  line-height: 1;
+}
+
+.gil-update-wrapper .gil-update-content .downloading,
+.gil-update-wrapper .gil-update-content .decompressing,
+.gil-update-wrapper .gil-update-content .done {
+  display: none;
+  font-size: 24pt;
+  transform: translate3d(0, 50px, 0);
+  transition: transform 0.4s ease-out;
+}
+
+/* Ellipsis animation */
+.ellipsis-anim span {
+  opacity: 0;
+  margin: 0 2px;
+  -webkit-animation: ellipsis-dot 1s infinite;
+  animation: ellipsis-dot 1s infinite;
+}
+
+.ellipsis-anim span:nth-child(1) {
+  -webkit-animation-delay: 0.0s;
+  animation-delay: 0.0s;
+}
+
+.ellipsis-anim span:nth-child(2) {
+  -webkit-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+}
+
+.ellipsis-anim span:nth-child(3) {
+  -webkit-animation-delay: 0.2s;
+  animation-delay: 0.2s;
+}
+
+@-webkit-keyframes ellipsis-dot {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes ellipsis-dot {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
