--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -124,6 +124,8 @@ $prefix: 'gil';
 
         .#{$prefix}-update-wrapper .process {
             display: inline-block;
+            max-width: 500px;
+            width: 100%;
             margin-top: 2em;
             height: 128px;
             line-height: 1;
@@ -131,10 +133,11 @@ $prefix: 'gil';
 
             .#{$prefix}-update-wrapper .#{$prefix}-update-content .downloading,
             .#{$prefix}-update-wrapper .#{$prefix}-update-content .decompressing,
-            .#{$prefix}-update-wrapper .#{$prefix}-update-content .done {
+            .#{$prefix}-update-wrapper .#{$prefix}-update-content .done,
+            .#{$prefix}-update-wrapper .#{$prefix}-update-content .failure {
                 display: none;
                 font-size: 24pt;
-                transform: translate3d(0, 50px, 0);
+                transform: translate3d(0, 40px, 0);
                 transition: transform 0.4s ease-out;
             }
 
