--- a/includes/templates/admin.html
+++ b/includes/templates/admin.html
@@ -7,7 +7,7 @@
         <h2>Source</h2>
         <table>
             <tr>
-                <td>Latest update</td><td><time class="time-ago" datetime="{latest_update}">{string_latest_update}</time> <a class="update" href="#">[ <span class="dashicons dashicons-update" style="margin-top: -0.1em"></span> UPDATE NOW ]</a></td>
+                <td>Latest update</td><td><time class="time-ago" datetime="{latest_update}">{string_latest_update}</time> <a class="update" href="#" diff="{diff_update}">[ <span class="dashicons dashicons-update" style="margin-top: -0.1em"></span> UPDATE NOW ]</a></td>
             </tr>
             <tr>
                 <td>Size</td><td class="gil-size">{file_size}</td>
