--- a/includes/templates/admin.html
+++ b/includes/templates/admin.html
@@ -1,21 +1,25 @@
-<div class="gil-wrapper">
-    <div class="gil-block gil-center">
+<div class="geo-ip-wrapper">
+    <div class="geo-ip-block geo-ip-center">
         <h1>{GEO_IP_LIBRARY}</h1>
     </div>
-    <p class="gil-by">{SOURCE_LIBRARY_BY} | {SCRAPING_BY}</p>
-    <div class="gil-block">
+    <p class="geo-ip-by">{SOURCE_LIBRARY_BY} | {SCRAPING_BY}</p>
+    <div class="geo-ip-block">
         <h2>{SOURCE}</h2>
         <table>
             <tr>
                 <td>{LATEST_UPDATE}</td>
                 <td>
-                    <time class="time-ago" datetime="{LATEST_UPDATE_DATE}">{LATEST_UPDATE_STRING}</time> 
-                    <a class="update" href="#" diff="{DIFF_UPDATE}">[ <span class="dashicons dashicons-update" style="margin-top: -0.1em"></span> {UPDATE_NOW} ]</a>
+                    <time class="time-ago" datetime="{LATEST_UPDATE_DATE}">{LATEST_UPDATE_STRING}</time>
+                    <a class="update" href="#" diff="{DIFF_UPDATE}">
+                        [<span>&nbsp;</span>
+                        <span class="dashicons dashicons-update" style="margin-top: -0.1em"></span>
+                        <span>&nbsp;</span>{UPDATE_NOW}<span>&nbsp;</span>]
+                    </a>
                 </td>
             </tr>
             <tr>
                 <td>{SIZE}</td>
-                <td class="gil-size">{FILE_SIZE}</td>
+                <td class="geo-ip-size">{FILE_SIZE}</td>
             </tr>
             <tr>
                 <td>{PHP_VERSION}</td>
@@ -23,83 +27,142 @@
             </tr>
         </table>
     </div>
-    <div class="gil-block">
+    <div class="geo-ip-block">
         <h2>{SHORTCODE}</h2>
         <p>{SHORTCODE_DESCRIPTION}</p>
-        <table class="gil-function">
+        <table class="geo-ip-function">
             <tr>
                 <td class="name">
-                    <span style="color: #369">[geo-ip-library country<span style="color: #936">="</span>
-                    <span style="color: #693">{SYNTAX_CONTENT}</span><span style="color: #936">"</span>]
-                    <span style="color: #666">{plain text, HTML and/or shortcodes}</span>[/geo-ip-library]</span>
+                    <span style="color: #369">[geo-ip country</span>
+                    <span style="color: #936">="</span>
+                    <span style="color: #693">{SYNTAX_COUNTRY}</span>
+                    <span style="color: #936">"</span>
+                    <span style="color: #369">]</span>
+                    <span style="color: #666">{SYNTAX_CONTENT}</span>
+                    <span style="color: #369">[/geo-ip]</span>
                 </td>
-                <td class="return">SYNTAX</td>
+                <td class="return">{SYNTAX}</td>
             </tr>
         </table>
-        <table class="gil-function">
+        <table class="geo-ip-function">
             <tr>
                 <td class="name">
-                    <span style="color: #369">[geo country<span style="color: #936">="</span><span style="color: #693">{SYNTAX_CONTENT}</span><span style="color: #936">"</span>]<span style="color: #666">{plain text, HTML and/or shortcodes}</span>[/geo]</span></td><td class="return">SYNTAX</td>
+                    <span style="color: #369">[geo country</span>
+                    <span style="color: #936">="</span>
+                    <span style="color: #693">{SYNTAX_COUNTRY}</span>
+                    <span style="color: #936">"</span>
+                    <span style="color: #369">]</span>
+                    <span style="color: #666">{SYNTAX_CONTENT}</span>
+                    <span style="color: #369">[/geo]</span>
+                </td>
+                <td class="return">{SYNTAX}</td>
             </tr>
         </table>
-        <p>A few usage examples:</p>
-        <table class="gil-function">
+        <p>{USAGE_EXAMPLES}</p>
+        <table class="geo-ip-function">
             <tr>
-                <td class="name"><span style="color: #369">[geo country<span style="color: #936">="</span><span style="color: #693">US</span><span style="color: #936">"</span>]<span style="color: #666">Hello world!</span>[/geo]</span></td><td rowspan="2" class="return">SINGLE COUNTRY</td>
+                <td class="name">
+                    <span style="color: #369">[geo country</span>
+                    <span style="color: #936">="</span>
+                    <span style="color: #693">US</span>
+                    <span style="color: #936">"</span>
+                    <span style="color: #369">]</span>
+                    <span style="color: #666">Hello world!</span>
+                    <span style="color: #369">[/geo]</span>
+                </td>
+                <td rowspan="2" class="return">{SINGLE_COUNTRY}</td>
             </tr>
             <tr>
-                <td class="description">This will display <i>Hello World!</i> to all visitors from USA. Others will not see anything at all.</td>
+                <td class="description">{SINGLE_COUNTRY_DESCRIPTION}</td>
             </tr>
         </table>
-        <table class="gil-function">
+        <table class="geo-ip-function">
             <tr>
-                <td class="name"><span style="color: #369">[geo country<span style="color: #936">="</span><span style="color: #693">CL,ES,MX</span><span style="color: #936">"</span>]<span style="color: #666">¡Hola mundo!</span>[/geo]</span></td><td rowspan="2" class="return">MULTIPLE COUNTRIES</td>
+                <td class="name">
+                    <span style="color: #369">[geo country</span>
+                    <span style="color: #936">="</span>
+                    <span style="color: #693">CL,ES,MX</span>
+                    <span style="color: #936">"</span>
+                    <span style="color: #369">]</span>
+                    <span style="color: #666">¡Hola mundo!</span>
+                    <span style="color: #369">[/geo]</span>
+                </td>
+                <td rowspan="2" class="return">{MULTIPLE_COUNTRIES}</td>
             </tr>
             <tr>
-                <td class="description">This will display <i>¡Hola mundo!</i> to all visitors from Chile, Spain and Mexico. Others will not see anything at all.</td>
+                <td class="description">{MULTIPLE_COUNTRIES_DESCRIPTION}</td>
             </tr>
         </table>
-        <p>You can also use shortcodes within geo shortcode:</p>
-        <table class="gil-function">
+        <p>{OTHER_SHORTCODE}</p>
+        <table class="geo-ip-function">
             <tr>
-                <td class="name"><span style="color: #369">[geo country<span style="color: #936">="</span><span style="color: #693">CA</span><span style="color: #936">"</span>]<span style="color: #666">We're ready to go! See details below:</span> <span style="color: #755">[my-other-shortcode]</span>[/geo]</span></td><td rowspan="2" class="return">SHORTCODE-CEPTION</td>
+                <td class="name">
+                    <span style="color: #369">[geo country</span>
+                    <span style="color: #936">="</span>
+                    <span style="color: #693">CA</span>
+                    <span style="color: #936">"</span>
+                    <span style="color: #369">]</span>
+                    <span style="color: #666">{OTHER_SHORTCODE_SYNTAX}</span>
+                    <span>&nbsp;</span>
+                    <span style="color: #755">{OTHER_SHORTCODE_TAG}</span>
+                    <span style="color: #369">[/geo]</span>
+                </td>
+                <td rowspan="2" class="return">{SHORTCODE_CEPTION}</td>
             </tr>
             <tr>
-                <td class="description">This will display the content to all visitors from Canada and will process <i>[my-other-shortcode]</i> shortcode. Others will not see anything at all.</td>
+                <td class="description">{OTHER_SHORTCODE_DESCRIPTION}</td>
             </tr>
         </table>
     </div>
-    <div class="gil-block">
-        <h2>Coding</h2>
-        <p>The following static functions can be used anywhere along GeoIPLibrary class:</p>
-        <table class="gil-function">
+    <div class="geo-ip-block">
+        <h2>{CODING}</h2>
+        <p>{CODING_DESCRIPTION}</p>
+        <table class="geo-ip-function">
             <tr>
-                <td class="name"><span style="color: #369">get_client_address()</span></td><td class="return">string</td>
+                <td class="name"><span style="color: #369">get_client_address()</span></td>
             </tr>
             <tr>
-                <td colspan="2" class="description">Returns the current client's IP address. It bypasses proxies, forwarding and network masks.</td>
-            </tr>
-        </table>
-        <table class="gil-function">
-            <tr>
-                <td class="name"><span style="color: #369">get_client_country_code</span>(<span style="color: #693">string</span> <span style="color: #369">$ip</span> <span style="color: #936">= ''</span>)</td><td class="return">string</td>
-            </tr>
-            <tr>
-                <td colspan="2" class="description">Returns the current client's <a href="https://wikipedia.org/wiki/ISO_3166-1_alpha-2">ISO 3166-1 alpha-2</a> country code or the specified in <span style="color: #369">$ip</span> (inherits <span style="color: #369">get_client_address()</span> algorithm in that case).</td>
+                <td class="description">{GET_CLIENT_ADDRESS}</td>
             </tr>
         </table>
-        <table class="gil-function">
+        <table class="geo-ip-function">
             <tr>
-                <td class="name"><span style="color: #369">get_client_country_name</span>(<span style="color: #693">string</span> <span style="color: #369">$ip</span> <span style="color: #936">= ''</span>)</td><td class="return">string</td>
+                <td class="name">
+                    <span style="color: #369">get_client_country_code</span>
+                    <span>(</span>
+                    <span style="color: #693">string</span>
+                    <span>&nbsp;</span>
+                    <span style="color: #369">$ip</span>
+                    <span>&nbsp;</span>
+                    <span style="color: #936">= ''</span>
+                    <span>)</span>
+                </td>
             </tr>
             <tr>
-                <td colspan="2" class="description">Returns the current client's country name or the specified in <span style="color: #369">$ip</span> (inherits <span style="color: #369">get_client_address()</span> algorithm in that case).</td>
+                <td class="description">{GET_CLIENT_COUNTRY_CODE}</td>
+            </tr>
+        </table>
+        <table class="geo-ip-function">
+            <tr>
+                <td class="name">
+                    <span style="color: #369">get_client_country_name</span>
+                    <span>(</span>
+                    <span style="color: #693">string</span>
+                    <span>&nbsp;</span>
+                    <span style="color: #369">$ip</span>
+                    <span>&nbsp;</span>
+                    <span style="color: #936">= ''</span>
+                    <span>)</span>
+                </td>
+            </tr>
+            <tr>
+                <td class="description">{GET_CLIENT_COUNTRY_NAME}</td>
             </tr>
         </table>
     </div>
 </div>
-<div class="gil-update-wrapper">
-    <div class="gil-update-content">
+<div class="geo-ip-update-wrapper">
+    <div class="geo-ip-update-content">
         <div class="animation">
             <div class="bookshelf_wrapper">
                 <ul class="books_list">
@@ -114,10 +177,10 @@
                 </div>
             </div>
         <div class="process">
-            <div class="downloading">Downloading library package <span class="ellipsis-anim"><span>.</span><span>.</span><span>.</span></span></div>
-            <div class="decompressing">Decompressing library file <span class="ellipsis-anim"><span>.</span><span>.</span><span>.</span></span></div>
-            <div class="done">Everything works like a charm!<br /><a class="gil-button gil-close" href="#">OK, you're the best!</a></div>
-            <div class="failure"><div class="exception"></div><br /><a class="gil-button gil-close" href="#">For sure I will</a></div>
+            <div class="downloading">{DOWNLOADING}<span class="ellipsis-anim"><span>&nbsp;</span><span>.</span><span>.</span><span>.</span></span></div>
+            <div class="decompressing">{DECOMPRESSING}<span>&nbsp;</span><span class="ellipsis-anim"><span>.</span><span>.</span><span>.</span></span></div>
+            <div class="done">{DONE}<br /><a class="geo-ip-button geo-ip-close" href="#">{OK_BUTTON}</a></div>
+            <div class="failure"><div class="exception"></div><br /><a class="geo-ip-button geo-ip-close" href="#">{ERROR_BUTTON}</a></div>
         </div>
     </div>
 </div>
