--- a/includes/templates/admin.html
+++ b/includes/templates/admin.html
@@ -152,11 +152,11 @@
                 </tr>
                 <tr>
                     <td><code>[LIBRARY]</code> <a href="http://chir.ag/projects/geoiploc/">{PROJECT_SITE}</a></td>
-                    <td><code>[PLUGIN]</code> <a href="http://ricardomiguel.cl/projects/geo-ip-library">Project site</a></td>
+                    <td><code>[PLUGIN]</code> <a href="http://ricardomiguel.cl/projects/geo-ip-library">{PROJECT_SITE}</a></td>
                 </tr>
                 <tr>
-                    <td><code>[LIBRARY]</code> <a href="http://software77.net/geo-ip/">Software77.net geoip database site</a></td>
-                    <td><code>[PLUGIN]</code> <a href="https://github.com/ricardo-miguel/geo-ip-library">Git repository</a></td>
+                    <td><code>[LIBRARY]</code> <a href="http://software77.net/geo-ip/">{DATABASE_SITE}</a></td>
+                    <td><code>[PLUGIN]</code> <a href="https://github.com/ricardo-miguel/geo-ip-library">{GIT_REPOSITORY}</a></td>
                 </tr>
             </table>
         </div>
