--- a/includes/templates/admin.html
+++ b/includes/templates/admin.html
@@ -95,7 +95,7 @@
         <table class="geo-ip-function">
             <tr>
                 <td class="name">
-                    <span style="color: #369">get_client_country_code</span><span>(</span><span style="color: #693">string</span><span style="color: #369">$ip</span><span style="color: #936">= ''</span><span>)</span>
+                    <span style="color: #369">get_client_country_code</span><span>(</span><span style="color: #693">string</span> <span style="color: #369">$ip</span> <span style="color: #936">= ''</span><span>)</span>
                 </td>
             </tr>
             <tr>
@@ -105,7 +105,7 @@
         <table class="geo-ip-function">
             <tr>
                 <td class="name">
-                    <span style="color: #369">get_client_country_name</span><span>(</span><span style="color: #693">string</span><span style="color: #369">$ip</span><span style="color: #936">= ''</span><span>)</span>
+                    <span style="color: #369">get_client_country_name</span><span>(</span><span style="color: #693">string</span> <span style="color: #369">$ip</span> <span style="color: #936">= ''</span><span>)</span>
                 </td>
             </tr>
             <tr>
@@ -147,18 +147,19 @@
             <p>{ABOUT_S5}</p>
             <table class="more-info">
                 <tr>
-                    <td><code>[LIBRARY]</code> <a href="http://chir.ag/">{AUTHOR_SITE}</a></td>
-                    <td><code>[PLUGIN]</code> <a href="http://ricardomiguel.cl/">{AUTHOR_SITE}</a></td>
+                    <td><code>[LIBRARY]</code> <a href="//chir.ag/">{AUTHOR_SITE}</a></td>
+                    <td><code>[PLUGIN]</code> <a href="//ricardomiguel.cl/">{AUTHOR_SITE}</a></td>
                 </tr>
                 <tr>
-                    <td><code>[LIBRARY]</code> <a href="http://chir.ag/projects/geoiploc/">{PROJECT_SITE}</a></td>
-                    <td><code>[PLUGIN]</code> <a href="http://ricardomiguel.cl/projects/geo-ip-library">{PROJECT_SITE}</a></td>
+                    <td><code>[LIBRARY]</code> <a href="//chir.ag/projects/geoiploc/">{PROJECT_SITE}</a></td>
+                    <td><code>[PLUGIN]</code> <a href="//ricardomiguel.cl/projects/geo-ip-library">{PROJECT_SITE}</a></td>
                 </tr>
                 <tr>
-                    <td><code>[LIBRARY]</code> <a href="http://software77.net/geo-ip/">{DATABASE_SITE}</a></td>
-                    <td><code>[PLUGIN]</code> <a href="https://github.com/ricardo-miguel/geo-ip-library">{GIT_REPOSITORY}</a></td>
+                    <td><code>[LIBRARY]</code> <a href="//software77.net/geo-ip/">{DATABASE_SITE}</a></td>
+                    <td><code>[PLUGIN]</code> <a href="//github.com/ricardo-miguel/geo-ip-library">{GIT_REPOSITORY}</a></td>
                 </tr>
             </table>
+            <div class="close">{CLOSE_BOX}</div>
         </div>
     </div>
 </div>
